@@ -40,6 +40,12 @@ module amrex_multifab_module
      procedure :: norm1         => amrex_multifab_norm1
      procedure :: norm2         => amrex_multifab_norm2
      procedure :: setval        => amrex_multifab_setval
+     procedure :: add           => amrex_multifab_add
+     procedure :: subtract      => amrex_multifab_subtract
+     procedure :: multiply      => amrex_multifab_multiply
+     procedure :: divide        => amrex_multifab_divide
+     procedure :: saxpy         => amrex_multifab_saxpy
+     procedure :: lincomb       => amrex_multifab_lincomb
      procedure :: copy          => amrex_multifab_copy     ! This copies the data
      generic   :: parallel_copy => amrex_multifab_parallel_copy, amrex_multifab_parallel_copy_c, &
           amrex_multifab_parallel_copy_cg
@@ -213,6 +219,51 @@ module amrex_multifab_module
        real(amrex_real), value :: val
        integer(c_int), value :: ic, nc, ng
      end subroutine amrex_fi_multifab_setval
+
+     subroutine amrex_fi_multifab_add (dstmf, srcmf, srccomp, dstcomp, nc, ng) bind(c)
+       import
+       implicit none
+       type(c_ptr), value :: dstmf, srcmf
+       integer(c_int), value :: srccomp, dstcomp, nc, ng
+     end subroutine amrex_fi_multifab_add
+
+     subroutine amrex_fi_multifab_subtract (dstmf, srcmf, srccomp, dstcomp, nc, ng) bind(c)
+       import
+       implicit none
+       type(c_ptr), value :: dstmf, srcmf
+       integer(c_int), value :: srccomp, dstcomp, nc, ng
+     end subroutine amrex_fi_multifab_subtract
+
+     subroutine amrex_fi_multifab_multiply (dstmf, srcmf, srccomp, dstcomp, nc, ng) bind(c)
+       import
+       implicit none
+       type(c_ptr), value :: dstmf, srcmf
+       integer(c_int), value :: srccomp, dstcomp, nc, ng
+     end subroutine amrex_fi_multifab_multiply
+
+     subroutine amrex_fi_multifab_divide (dstmf, srcmf, srccomp, dstcomp, nc, ng) bind(c)
+       import
+       implicit none
+       type(c_ptr), value :: dstmf, srcmf
+       integer(c_int), value :: srccomp, dstcomp, nc, ng
+     end subroutine amrex_fi_multifab_divide
+
+     subroutine amrex_fi_multifab_saxpy (dstmf, a, srcmf, srccomp, dstcomp, nc, ng) bind(c)
+       import
+       implicit none
+       type(c_ptr), value :: dstmf, srcmf
+       integer(c_int), value :: srccomp, dstcomp, nc, ng
+       real(amrex_real), value :: a
+     end subroutine amrex_fi_multifab_saxpy
+
+     subroutine amrex_fi_multifab_lincomb (dstmf, a, srcmf1, srccomp1, b, srcmf2, srccomp2,&
+          dstcomp, nc, ng) bind(c)
+       import
+       implicit none
+       type(c_ptr), value :: dstmf, srcmf1, srcmf2
+       integer(c_int), value :: srccomp1, srccomp2, dstcomp, nc, ng
+       real(amrex_real), value :: a, b
+     end subroutine amrex_fi_multifab_lincomb
 
      subroutine amrex_fi_multifab_copy (dstmf, srcmf, srccomp, dstcomp, nc, ng) bind(c)
        import
@@ -569,6 +620,51 @@ contains
     ng = this%ng;   if (present(nghost)) ng = nghost
     call amrex_fi_multifab_setval(this%p, val, ic, nc, ng)
   end subroutine amrex_multifab_setval
+
+  subroutine amrex_multifab_add (this, srcmf, srccomp, dstcomp, nc, ng)
+    class(amrex_multifab), intent(inout) :: this
+    type(amrex_multifab), intent(in) :: srcmf
+    integer, intent(in) :: srccomp, dstcomp, nc, ng
+    call amrex_fi_multifab_add(this%p, srcmf%p, srccomp-1, dstcomp-1, nc, ng)
+  end subroutine amrex_multifab_add
+
+  subroutine amrex_multifab_subtract (this, srcmf, srccomp, dstcomp, nc, ng)
+    class(amrex_multifab), intent(inout) :: this
+    type(amrex_multifab), intent(in) :: srcmf
+    integer, intent(in) :: srccomp, dstcomp, nc, ng
+    call amrex_fi_multifab_subtract(this%p, srcmf%p, srccomp-1, dstcomp-1, nc, ng)
+  end subroutine amrex_multifab_subtract
+
+  subroutine amrex_multifab_multiply (this, srcmf, srccomp, dstcomp, nc, ng)
+    class(amrex_multifab), intent(inout) :: this
+    type(amrex_multifab), intent(in) :: srcmf
+    integer, intent(in) :: srccomp, dstcomp, nc, ng
+    call amrex_fi_multifab_multiply(this%p, srcmf%p, srccomp-1, dstcomp-1, nc, ng)
+  end subroutine amrex_multifab_multiply
+
+  subroutine amrex_multifab_divide (this, srcmf, srccomp, dstcomp, nc, ng)
+    class(amrex_multifab), intent(inout) :: this
+    type(amrex_multifab), intent(in) :: srcmf
+    integer, intent(in) :: srccomp, dstcomp, nc, ng
+    call amrex_fi_multifab_divide(this%p, srcmf%p, srccomp-1, dstcomp-1, nc, ng)
+  end subroutine amrex_multifab_divide
+
+  subroutine amrex_multifab_saxpy (this, a, srcmf, srccomp, dstcomp, nc, ng)
+    class(amrex_multifab), intent(inout) :: this
+    type(amrex_multifab), intent(in) :: srcmf
+    real(amrex_real), intent(in) :: a
+    integer, intent(in) :: srccomp, dstcomp, nc, ng
+    call amrex_fi_multifab_saxpy(this%p, a, srcmf%p, srccomp-1, dstcomp-1, nc, ng)
+  end subroutine amrex_multifab_saxpy
+
+  subroutine amrex_multifab_lincomb (this, a, srcmf1, srccomp1, b, srcmf2, srccomp2, dstcomp, nc, ng)
+    class(amrex_multifab), intent(inout) :: this
+    type(amrex_multifab), intent(in) :: srcmf1, srcmf2
+    integer, intent(in) :: srccomp1, srccomp2, dstcomp, nc, ng
+    real(amrex_real), intent(in) :: a, b
+    call amrex_fi_multifab_lincomb(this%p, a, srcmf1%p, srccomp1-1, b, srcmf2%p, srccomp2, &
+         dstcomp-1, nc, ng)
+  end subroutine amrex_multifab_lincomb
 
   subroutine amrex_multifab_copy (this, srcmf, srccomp, dstcomp, nc, ng)
     class(amrex_multifab) :: this
